Removed nib attempting to fix issues on Safari

--- a/src/index.css
+++ b/src/index.css
@@ -1,33 +1,3 @@
-article,
-details,
-section,
-summary,
-aside,
-main,
-menu,
-nav,
-figcaption,
-figure,
-footer,
-header,
-hgroup {
-  display: block;
-}
-audio,
-canvas,
-progress,
-video {
-  display: inline-block;
-  vertical-align: baseline;
-}
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-[hidden],
-template {
-  display: none;
-}
 html,
 body,
 div,
@@ -117,8 +87,6 @@ video {
   vertical-align: baseline;
 }
 * {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   font: inherit;
 }
@@ -135,59 +103,26 @@ a {
   text-decoration: none;
 }
 .contact {
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -o-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
   align-items: center;
   background-color: #f1f1f1;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
   display: flex;
   padding: 20px;
   position: relative;
   z-index: 3;
 }
 .contact .contact-logo {
-  -webkit-box-align: end;
-  -moz-box-align: end;
-  -o-box-align: end;
-  -ms-flex-align: end;
-  -webkit-align-items: flex-end;
   align-items: flex-end;
   background-position: center;
   background-repeat: no-repeat;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
   display: flex;
   height: 60px;
-  -webkit-box-pack: center;
-  -moz-box-pack: center;
-  -o-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
   justify-content: center;
   margin-bottom: 20px;
-  -webkit-transition: all 0.15s;
-  -moz-transition: all 0.15s;
-  -o-transition: all 0.15s;
-  -ms-transition: all 0.15s;
   transition: all 0.15s;
   width: 60px;
 }
 .contact .contact-logo:hover {
   cursor: pointer;
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  -o-transform: scale(1.1);
-  -ms-transform: scale(1.1);
   transform: scale(1.1);
 }
 .contact .contact-logo:hover span {
@@ -205,17 +140,10 @@ a {
 }
 .contact .logo-email:hover {
   cursor: default;
-  -webkit-transform: scale(1);
-  -moz-transform: scale(1);
-  -o-transform: scale(1);
-  -ms-transform: scale(1);
   transform: scale(1);
 }
 .contact .logo-email span {
   margin-left: -50px;
-  -webkit-user-select: all;
-  -moz-user-select: all;
-  -ms-user-select: all;
   user-select: all;
 }
 .contact .logo-email span:hover {
@@ -253,7 +181,6 @@ a {
 .home-text-container {
   background-color: rgba(255,255,255,0.5);
   border-radius: 5px;
-  -webkit-box-shadow: 0px 0px 10px 0px rgba(50,50,50,0.05);
   box-shadow: 0px 0px 10px 0px rgba(50,50,50,0.05);
   margin: 0 auto;
   position: relative;
@@ -272,17 +199,7 @@ a {
   display: block;
 }
 .contact-container {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
   display: flex;
-  -webkit-box-pack: distribute;
-  -moz-box-pack: distribute;
-  -o-box-pack: distribute;
-  -ms-flex-pack: distribute;
-  -webkit-justify-content: space-around;
   justify-content: space-around;
 }
 .home {
@@ -295,47 +212,18 @@ a {
   padding-top: 30px;
 }
 .home .home-img-container {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
   display: flex;
-  -webkit-box-pack: justify;
-  -moz-box-pack: justify;
-  -o-box-pack: justify;
-  -ms-flex-pack: justify;
-  -webkit-justify-content: space-between;
   justify-content: space-between;
   padding: 10px 0px 25px 0px;
 }
 .home .home-img-container .home-logo {
-  -webkit-box-align: end;
-  -moz-box-align: end;
-  -o-box-align: end;
-  -ms-flex-align: end;
-  -webkit-align-items: flex-end;
   align-items: flex-end;
   background-position: center;
   background-repeat: no-repeat;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
   display: flex;
   height: 60px;
-  -webkit-box-pack: center;
-  -moz-box-pack: center;
-  -o-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
   justify-content: center;
   margin-bottom: 20px;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  -ms-transition: all 0.3s;
   transition: all 0.3s;
   width: 60px;
 }
@@ -372,34 +260,17 @@ a {
 nav {
   color: #000;
   padding: 15px;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  -ms-transition: all 0.5s;
   transition: all 0.5s;
   width: 100%;
 }
 nav .nav-links {
-  -webkit-box-pack: justify;
-  -moz-box-pack: justify;
-  -o-box-pack: justify;
-  -ms-flex-pack: justify;
-  -webkit-justify-content: space-between;
   justify-content: space-between;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
   display: flex;
   margin: 0 auto;
   width: 90%;
 }
 nav .nav-links .nav-link {
   font-weight: 700;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
 }
 nav .nav-links .nav-link:hover {
@@ -407,11 +278,6 @@ nav .nav-links .nav-link:hover {
 }
 @media screen and (min-width: 450px) {
   nav .nav-links {
-    -webkit-box-pack: end;
-    -moz-box-pack: end;
-    -o-box-pack: end;
-    -ms-flex-pack: end;
-    -webkit-justify-content: flex-end;
     justify-content: flex-end;
     width: 405px;
   }
@@ -429,7 +295,6 @@ nav .nav-links .nav-link:hover {
 }
 .fixed-nav nav {
   background-color: #000;
-  -webkit-box-shadow: 0px 0px 10px 0px rgba(50,50,50,0.8);
   box-shadow: 0px 0px 10px 0px rgba(50,50,50,0.8);
   color: #ffd700;
   position: fixed;
@@ -449,11 +314,6 @@ nav .nav-links .nav-link:hover {
   z-index: 2;
 }
 .project {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
   display: flex;
 }
 .project h1,
@@ -487,9 +347,6 @@ nav .nav-links .nav-link:hover {
   margin: 0 auto;
   margin-bottom: 45px;
   padding: 7px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
   width: 130px;
 }
@@ -500,27 +357,11 @@ nav .nav-links .nav-link:hover {
   }
 }
 .tablet {
-  -webkit-box-align: end;
-  -moz-box-align: end;
-  -o-box-align: end;
-  -ms-flex-align: end;
-  -webkit-align-items: flex-end;
   align-items: flex-end;
   background-color: #101a24;
   border-radius: 8px 8px 0px 0px;
-  -webkit-box-shadow: 0px 0px 10px 0px rgba(50,50,50,0.5);
   box-shadow: 0px 0px 10px 0px rgba(50,50,50,0.5);
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
   display: flex;
-  -webkit-box-pack: center;
-  -moz-box-pack: center;
-  -o-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
   justify-content: center;
   width: 100%;
   padding: 3% 3% 0px 3%;
@@ -529,18 +370,10 @@ nav .nav-links .nav-link:hover {
   content: url("./imgs/twitch-tablet.png");
   width: 100%;
   height: 95%;
-  -webkit-transform: translateZ(0);
-  -moz-transform: translateZ(0);
-  -o-transform: translateZ(0);
-  -ms-transform: translateZ(0);
   transform: translateZ(0);
 }
 .tablet .sql-gui-tablet-image {
   content: url("./imgs/sql-tablet.png");
   width: 100%;
-  -webkit-transform: translateZ(0);
-  -moz-transform: translateZ(0);
-  -o-transform: translateZ(0);
-  -ms-transform: translateZ(0);
   transform: translateZ(0);
 }
